@@ -1,3 +1,7 @@
+timing_180910: Removed addition of double quotes to timer names in
+               perf_mod.F90 and added this as an output option in 
+               gptl.c (so internally the names do not have the quotes)
+               [Patrick Worley]
 timing_180822: Fixed perf_mod.F90 bug that prevents PAPI derived events 
                from being recognized.
                [Patrick Worley]
